[package]
name = "samay"
version = "0.1.1"
edition = "2021"
description = "A slick cli to track your far friends times"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
chrono-tz = "0.8.3"
clap = { version = "4.4.6", features = ["derive"] }
home = "0.5.5"
rusqlite = "0.29.0"
